# HIT_QEC

./: .gitignore  config.json  main.py  readme.md  test.py
codes/: Concatenation.py  HGP.py  RotatedSurface.py  RotatedToric.py  Surface.py  Toric.py  XYZ_3D.py  XYZ_4D.py  XZTGRE.py  XZZX.py  ZTGRE.py  __init__.py
decoders/: BP_Decoupling_Decoder_ps.py  LLRBP4_Decoder_py.py  __init__.py
decoders/LLRBP4_decoder/: CMakeLists.txt  setup.py
decoders/LLRBP4_decoder/LLRBP4_decoder.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
decoders/LLRBP4_decoder/include/: LLRBp4Decoder.h
decoders/LLRBP4_decoder/src/: LLRBp4Decoder.cpp  decoder_bindings.cpp
decoders/bp_decoupling_decoder_py/: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
decoders/bp_decoupling_decoder_py/example/: test.py
decoders/bp_decoupling_decoder_py/src/: bp_decoder.cpp  main.cpp  sparse_matrix.cpp
decoders/bp_decoupling_decoder_py/src/include/: bp_decoder.hpp  sparse_matrix.hpp
results/RotatedSurface/: [3, 5, 7]_AEWA-BP_capacity_T=1000.xlsx  [3, 5, 7]_AEWA-BP_capacity_T=1000_1.xlsx  [3, 5, 7]_AMBP_AEWA-BP_capacity_T=1000.xlsx  [3, 5, 7]_FDBP_FDBP_capacity_T=1000.xlsx
results/RotatedToric/: [4, 6, 8]_AMBP_capacity_T=1000.xlsx  [4, 6, 8]_EWA-BP_AEWA-BP_capacity_T=1000.xlsx  [4, 6, 8]_MWPM_AEWA-BP_phenomenological_T=1000.xlsx  [4]_AEWA-BP_phenomenological_T=1000.xlsx
results/Surface/: [3, 5, 7]_AEWA-BP_capacity_T=1000.xlsx  [3, 5, 7]_EWA-BP_phenomenological.xlsx  (+3 more)
runners/: code_builder.py  decoder_builder.py  runner.py
utils/: compute_logical.py  plotter.py  utils.py
(+9 files in other folders)
